--- a/splash.html
+++ b/splash.html
@@ -1,4 +1,63 @@
-<body style="display:flex;align-items:center;justify-content:center;height:100vh;background:#667eea;color:white;font-size:48px;">
-HarDil ❤️
-<script>setTimeout(()=>location.href='index.html',2200)</script>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title>HarDil</title>
+<style>
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(135deg,#667eea,#764ba2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Segoe UI", sans-serif;
+  color: white;
+  overflow: hidden;
+}
+
+.container {
+  text-align: center;
+  animation: fadeIn 2.5s ease forwards;
+}
+
+.friends {
+  font-size: 60px;
+  animation: hug 1.8s ease forwards;
+}
+
+.app-name {
+  font-size: 42px;
+  font-weight: bold;
+  opacity: 0;
+  margin-top: 20px;
+  animation: showName 0.7s ease forwards;
+  animation-delay: 1.8s;
+}
+
+@keyframes hug {
+  0% { letter-spacing: 80px; }
+  70% { letter-spacing: 10px; }
+  100% { letter-spacing: 0; }
+}
+
+@keyframes showName {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+</style>
+
+<script>
+setTimeout(() => {
+  window.location.href = "index.html";
+}, 3000);
+</script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="friends">🤝 ❤️</div>
+    <div class="app-name">HarDil</div>
+  </div>
 </body>
+</html>
