Add session check for first-time visitors
Redirect to splash page if user is visiting for the first time.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<script>
+if (!sessionStorage.getItem("visited")) {
+  sessionStorage.setItem("visited", "true");
+  window.location.replace("splash.html");
+}
+</script>
 <html>
 <head>
   <title>HarDil</title>
