--- a/splash.html
+++ b/splash.html
@@ -1,63 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<title>HarDil</title>
 <style>
 body {
-  margin: 0;
-  height: 100vh;
-  background: linear-gradient(135deg,#667eea,#764ba2);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Segoe UI", sans-serif;
-  color: white;
-  overflow: hidden;
+  margin:0;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#667eea;
+  font-family:sans-serif;
 }
 
-.container {
-  text-align: center;
-  animation: fadeIn 2.5s ease forwards;
+.wrap {
+  text-align:center;
+  animation: fade 2.5s ease forwards;
 }
 
 .friends {
-  font-size: 60px;
+  font-size:64px;
   animation: hug 1.8s ease forwards;
 }
 
-.app-name {
-  font-size: 42px;
-  font-weight: bold;
-  opacity: 0;
-  margin-top: 20px;
-  animation: showName 0.7s ease forwards;
-  animation-delay: 1.8s;
+.name {
+  font-size:42px;
+  color:white;
+  margin-top:12px;
+  opacity:0;
+  animation: show 0.6s ease forwards;
+  animation-delay:1.6s;
 }
 
 @keyframes hug {
-  0% { letter-spacing: 80px; }
-  70% { letter-spacing: 10px; }
-  100% { letter-spacing: 0; }
+  0% { transform: scale(0.8); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
 }
 
-@keyframes showName {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
+@keyframes show {
+  to { opacity:1; }
 }
 </style>
 
 <script>
-setTimeout(() => {
-  window.location.href = "index.html";
-}, 3000);
+setTimeout(()=>location.href="index.html",2600);
 </script>
 </head>
-
 <body>
-  <div class="container">
+  <div class="wrap">
     <div class="friends">🤝 ❤️</div>
-    <div class="app-name">HarDil</div>
+    <div class="name">HarDil</div>
   </div>
 </body>
 </html>
