Add sessionStorage check for hardil_intro_seen

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+
 <script>
-if (!sessionStorage.getItem("visited")) {
-  sessionStorage.setItem("visited", "true");
+if (!sessionStorage.getItem("hardil_intro_seen")) {
+  sessionStorage.setItem("hardil_intro_seen", "yes");
   window.location.replace("splash.html");
 }
 </script>
 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
