modification in animation and web deployment code

--- a/splash.html
+++ b/splash.html
@@ -1,55 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#667eea;
-  font-family:sans-serif;
-}
-
-.wrap {
-  text-align:center;
-  animation: fade 2.5s ease forwards;
-}
-
-.friends {
-  font-size:64px;
-  animation: hug 1.8s ease forwards;
-}
-
-.name {
-  font-size:42px;
-  color:white;
-  margin-top:12px;
-  opacity:0;
-  animation: show 0.6s ease forwards;
-  animation-delay:1.6s;
-}
-
-@keyframes hug {
-  0% { transform: scale(0.8); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
-}
-
-@keyframes show {
-  to { opacity:1; }
-}
-</style>
-
-<script>
-setTimeout(()=>location.href="index.html",2600);
-</script>
-</head>
-<body>
-  <div class="wrap">
-    <div class="friends">🤝 ❤️</div>
-    <div class="name">HarDil</div>
-  </div>
-</body>
-</html>
+<body style='display:flex;align-items:center;justify-content:center;height:100vh;background:#667eea;color:white;font-size:36px;'>🤝 ❤️ HarDil<script>setTimeout(()=>location.href='index.html',2500)</script></body>
