Update health.html to use anchor tags for links
Replaced buttons with anchor tags for external links.

--- a/pages/health.html
+++ b/pages/health.html
@@ -1,1 +1,18 @@
-<h2>Health</h2><div class='grid'><button onclick="open('https://www.1mg.com')">Tata 1mg</button><button onclick="open('https://pharmeasy.in')">PharmEasy</button><button onclick="open('https://www.practo.com')">Practo</button></div><script src='../app.js'></script>
+<h2>Health</h2>
+
+<div class="grid">
+  <a class="app-btn"
+     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://www.1mg.com'>">
+     Tata 1mg
+  </a>
+
+  <a class="app-btn"
+     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://pharmeasy.in'>">
+     PharmEasy
+  </a>
+
+  <a class="app-btn"
+     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://www.practo.com'>">
+     Practo
+  </a>
+</div>
