Refactor social media buttons to use data-url

--- a/index.html
+++ b/index.html
@@ -21,29 +21,23 @@
   <section class="card social">
     <h2>🌐 Social Media</h2>
     <div class="grid">
-      <div class="app-btn" onclick="openApp('https://web.whatsapp.com')" style="cursor:pointer">
-        <img src="assets/icons/whatsapp.png">
-        <span>WhatsApp</span>
+      <div class="app-btn" data-url="https://web.whatsapp.com">
+        <img src="assets/icons/whatsapp.png"><span>WhatsApp</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.instagram.com')" style="cursor:pointer">
-        <img src="assets/icons/instagram.png">
-        <span>Instagram</span>
+      <div class="app-btn" data-url="https://www.instagram.com">
+        <img src="assets/icons/instagram.png"><span>Instagram</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://mail.google.com')" style="cursor:pointer">
-        <img src="assets/icons/gmail.png">
-        <span>Gmail</span>
+      <div class="app-btn" data-url="https://mail.google.com">
+        <img src="assets/icons/gmail.png"><span>Gmail</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://web.telegram.org')" style="cursor:pointer">
-        <img src="assets/icons/telegram.png">
-        <span>Telegram</span>
+      <div class="app-btn" data-url="https://web.telegram.org">
+        <img src="assets/icons/telegram.png"><span>Telegram</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.facebook.com')" style="cursor:pointer">
-        <img src="assets/icons/facebook.png">
-        <span>Facebook</span>
+      <div class="app-btn" data-url="https://www.facebook.com">
+        <img src="assets/icons/facebook.png"><span>Facebook</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://twitter.com')" style="cursor:pointer">
-        <img src="assets/icons/twitter.png">
-        <span>Twitter</span>
+      <div class="app-btn" data-url="https://twitter.com">
+        <img src="assets/icons/twitter.png"><span>Twitter</span>
       </div>
     </div>
   </section>
@@ -52,41 +46,32 @@
   <section class="card jobs">
     <h2>💼 Jobs & Career</h2>
     <div class="grid">
-      <div class="app-btn" onclick="openApp('https://www.linkedin.com/jobs')" style="cursor:pointer">
-        <img src="assets/icons/linkedin.png">
-        <span>LinkedIn</span>
+      <div class="app-btn" data-url="https://www.linkedin.com/jobs">
+        <img src="assets/icons/linkedin.png"><span>LinkedIn</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.naukri.com')" style="cursor:pointer">
-        <img src="assets/icons/naukri.png">
-        <span>Naukri</span>
+      <div class="app-btn" data-url="https://www.naukri.com">
+        <img src="assets/icons/naukri.png"><span>Naukri</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.indeed.com')" style="cursor:pointer">
-        <img src="assets/icons/indeed.png">
-        <span>Indeed</span>
+      <div class="app-btn" data-url="https://www.indeed.com">
+        <img src="assets/icons/indeed.png"><span>Indeed</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.glassdoor.com')" style="cursor:pointer">
-        <img src="assets/icons/glassdoor.png">
-        <span>Glassdoor</span>
+      <div class="app-btn" data-url="https://www.glassdoor.com">
+        <img src="assets/icons/glassdoor.png"><span>Glassdoor</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.foundit.in')" style="cursor:pointer">
-        <img src="assets/icons/foundit.png">
-        <span>Foundit</span>
+      <div class="app-btn" data-url="https://www.foundit.in">
+        <img src="assets/icons/foundit.png"><span>Foundit</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://unstop.com')" style="cursor:pointer">
-        <img src="assets/icons/unstop.png">
-        <span>Unstop</span>
+      <div class="app-btn" data-url="https://unstop.com">
+        <img src="assets/icons/unstop.png"><span>Unstop</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.shine.com')" style="cursor:pointer">
-        <img src="assets/icons/shine.png">
-        <span>Shine</span>
+      <div class="app-btn" data-url="https://www.shine.com">
+        <img src="assets/icons/shine.png"><span>Shine</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://cutshort.io')" style="cursor:pointer">
-        <img src="assets/icons/cutshort.png">
-        <span>CutShort</span>
+      <div class="app-btn" data-url="https://cutshort.io">
+        <img src="assets/icons/cutshort.png"><span>CutShort</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://internshala.com')" style="cursor:pointer">
-        <img src="assets/icons/internshala.png">
-        <span>Internshala</span>
+      <div class="app-btn" data-url="https://internshala.com">
+        <img src="assets/icons/internshala.png"><span>Internshala</span>
       </div>
     </div>
   </section>
@@ -95,42 +80,105 @@
   <section class="card ott">
     <h2>🎬 OTT Platforms</h2>
     <div class="grid">
-      <div class="app-btn" onclick="openApp('https://www.netflix.com')" style="cursor:pointer">
-        <img src="assets/icons/netflix.png">
-        <span>Netflix</span>
+      <div class="app-btn" data-url="https://www.netflix.com">
+        <img src="assets/icons/netflix.png"><span>Netflix</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.primevideo.com')" style="cursor:pointer">
-        <img src="assets/icons/prime.png">
-        <span>Prime Video</span>
+      <div class="app-btn" data-url="https://www.primevideo.com">
+        <img src="assets/icons/prime.png"><span>Prime Video</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.hotstar.com')" style="cursor:pointer">
-        <img src="assets/icons/hotstar.png">
-        <span>Hotstar</span>
+      <div class="app-btn" data-url="https://www.hotstar.com">
+        <img src="assets/icons/hotstar.png"><span>Hotstar</span>
       </div>
-      <div class="app-btn" onclick="openApp('https://www.youtube.com')" style="cursor:pointer">
-        <img src="assets/icons/youtube.png">
-        <span>YouTube</span>
+      <div class="app-btn" data-url="https://www.youtube.com">
+        <img src="assets/icons/youtube.png"><span>YouTube</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- MUSIC -->
+  <section class="card music">
+    <h2>🎵 Music</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://open.spotify.com">
+        <img src="assets/icons/spotify.png"><span>Spotify</span>
+      </div>
+      <div class="app-btn" data-url="https://music.youtube.com">
+        <img src="assets/icons/youtubemusic.png"><span>YouTube Music</span>
+      </div>
+      <div class="app-btn" data-url="https://gaana.com">
+        <img src="assets/icons/gaana.png"><span>Gaana</span>
+      </div>
+      <div class="app-btn" data-url="https://www.jiosaavn.com">
+        <img src="assets/icons/jiosaavn.png"><span>JioSaavn</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- SHOPPING -->
+  <section class="card shop">
+    <h2>🛒 Shopping</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://www.amazon.in">
+        <img src="assets/icons/amazon.png"><span>Amazon</span>
+      </div>
+      <div class="app-btn" data-url="https://www.flipkart.com">
+        <img src="assets/icons/flipkart.png"><span>Flipkart</span>
+      </div>
+      <div class="app-btn" data-url="https://www.myntra.com">
+        <img src="assets/icons/myntra.png"><span>Myntra</span>
+      </div>
+      <div class="app-btn" data-url="https://www.ajio.com">
+        <img src="assets/icons/ajio.png"><span>Ajio</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- TRAVEL -->
+  <section class="card travel">
+    <h2>✈️ Travel & Ride</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://www.irctc.co.in">
+        <img src="assets/icons/irctc.png"><span>IRCTC</span>
+      </div>
+      <div class="app-btn" data-url="https://www.makemytrip.com">
+        <img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span>
+      </div>
+      <div class="app-btn" data-url="https://www.uber.com">
+        <img src="assets/icons/uber.png"><span>Uber</span>
+      </div>
+      <div class="app-btn" data-url="https://www.rapido.bike">
+        <img src="assets/icons/rapido.png"><span>Rapido</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- HEALTH -->
+  <section class="card health">
+    <h2>🩺 Health & Pharmacy</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://www.1mg.com">
+        <img src="assets/icons/1mg.png"><span>Tata 1mg</span>
+      </div>
+      <div class="app-btn" data-url="https://pharmeasy.in">
+        <img src="assets/icons/pharmeasy.png"><span>PharmEasy</span>
+      </div>
+      <div class="app-btn" data-url="https://www.practo.com">
+        <img src="assets/icons/practo.png"><span>Practo</span>
+      </div>
+      <div class="app-btn" data-url="https://www.apollo247.com">
+        <img src="assets/icons/apollo.png"><span>Apollo 24/7</span>
       </div>
     </div>
   </section>
 
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
-  <p>
-    HarDil strictly redirects users to official websites only.<br>
-    No logins stored · No payments · No betting.<br>
-    App rights belong to <strong>Hari & Dileep</strong>.
-  </p>
+  HarDil strictly redirects users to official websites only.<br>
+  No logins stored · No payments · No betting.<br>
+  App rights belong to <strong>Hari & Dileep</strong>.
 </footer>
 
-<!-- ✅ FIXED JAVASCRIPT -->
-<script>
-  function openApp(url) {
-    window.open(url, "_blank");
-  }
-</script>
-
+<script src="app.js"></script>
 </body>
 </html>
