--- a/pages/health.html
+++ b/pages/health.html
@@ -1,18 +1,44 @@
-<h2>Health</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Health | HarDil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<div class="grid">
-  <a class="app-btn"
-     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://www.1mg.com'>">
-     Tata 1mg
-  </a>
+<header class="hero small">
+  <h1>🩺 Health</h1>
+  <p>Trusted medical services</p>
+</header>
 
-  <a class="app-btn"
-     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://pharmeasy.in'>">
-     PharmEasy
-  </a>
+<main class="app">
+  <section class="card">
+    <div class="grid">
 
-  <a class="app-btn"
-     href="data:text/html,<meta http-equiv='refresh' content='0;url=https://www.practo.com'>">
-     Practo
-  </a>
-</div>
+      <a class="app-btn" href="https://www.1mg.com" target="_blank">
+        <img src="assets/icons/1mg.png">
+        <span>Tata 1mg</span>
+      </a>
+
+      <a class="app-btn" href="https://pharmeasy.in" target="_blank">
+        <img src="assets/icons/pharmeasy.png">
+        <span>PharmEasy</span>
+      </a>
+
+      <a class="app-btn" href="https://www.practo.com" target="_blank">
+        <img src="assets/icons/practo.png">
+        <span>Practo</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back</a>
+</footer>
+
+</body>
+</html>
