Enhance health page with pharmacy services
Updated the title and header text to include 'Pharmacy'. Added a link to Apollo 24/7 services.

--- a/pages/health.html
+++ b/pages/health.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Health | HarDil</title>
+  <title>Health & Pharmacy | HarDil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header class="hero small">
-  <h1>🩺 Health</h1>
-  <p>Trusted medical services</p>
+  <h1>🩺 Health & Pharmacy</h1>
+  <p>Medical & pharmacy services</p>
 </header>
 
 <main class="app">
@@ -32,12 +33,17 @@
         <span>Practo</span>
       </a>
 
+      <a class="app-btn" href="https://www.apollo247.com" target="_blank">
+        <img src="assets/icons/apollo.png">
+        <span>Apollo 24/7</span>
+      </a>
+
     </div>
   </section>
 </main>
 
 <footer class="footer">
-  <a href="index.html">⬅ Back</a>
+  <a href="index.html">⬅ Back to Home</a>
 </footer>
 
 </body>
