Revamp jobs page layout and add job links

--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -1,1 +1,66 @@
-<h2>Jobs</h2><div class='grid'><button onclick="open('https://www.naukri.com')">Naukri</button><button onclick="open('https://www.indeed.com')">Indeed</button><button onclick="open('https://internshala.com')">Internshala</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Jobs & Career | HarDil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>💼 Jobs & Career</h1>
+  <p>Explore opportunities</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.linkedin.com/jobs" target="_blank">
+        <img src="assets/icons/linkedin.png"><span>LinkedIn</span>
+      </a>
+
+      <a class="app-btn" href="https://www.naukri.com" target="_blank">
+        <img src="assets/icons/naukri.png"><span>Naukri</span>
+      </a>
+
+      <a class="app-btn" href="https://www.indeed.com" target="_blank">
+        <img src="assets/icons/indeed.png"><span>Indeed</span>
+      </a>
+
+      <a class="app-btn" href="https://www.glassdoor.com" target="_blank">
+        <img src="assets/icons/glassdoor.png"><span>Glassdoor</span>
+      </a>
+
+      <a class="app-btn" href="https://www.foundit.in" target="_blank">
+        <img src="assets/icons/foundit.png"><span>Foundit</span>
+      </a>
+
+      <a class="app-btn" href="https://unstop.com" target="_blank">
+        <img src="assets/icons/unstop.png"><span>Unstop</span>
+      </a>
+
+      <a class="app-btn" href="https://www.shine.com" target="_blank">
+        <img src="assets/icons/shine.png"><span>Shine</span>
+      </a>
+
+      <a class="app-btn" href="https://cutshort.io" target="_blank">
+        <img src="assets/icons/cutshort.png"><span>CutShort</span>
+      </a>
+
+      <a class="app-btn" href="https://internshala.com" target="_blank">
+        <img src="assets/icons/internshala.png"><span>Internshala</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
