Rewrite music.html with structured HTML format

--- a/pages/music.html
+++ b/pages/music.html
@@ -1,1 +1,46 @@
-<h2>Music</h2><div class='grid'><button onclick="open('https://open.spotify.com')">Spotify</button><button onclick="open('https://www.jiosaavn.com')">JioSaavn</button><button onclick="open('https://gaana.com')">Gaana</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Music | HarDil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>🎵 Music</h1>
+  <p>Listen & enjoy</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://open.spotify.com" target="_blank">
+        <img src="assets/icons/spotify.png"><span>Spotify</span>
+      </a>
+
+      <a class="app-btn" href="https://music.youtube.com" target="_blank">
+        <img src="assets/icons/youtubemusic.png"><span>YouTube Music</span>
+      </a>
+
+      <a class="app-btn" href="https://gaana.com" target="_blank">
+        <img src="assets/icons/gaana.png"><span>Gaana</span>
+      </a>
+
+      <a class="app-btn" href="https://www.jiosaavn.com" target="_blank">
+        <img src="assets/icons/jiosaavn.png"><span>JioSaavn</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
