Refactor social media section with new links and styles
Updated social media links and improved layout.

--- a/pages/social.html
+++ b/pages/social.html
@@ -1,1 +1,12 @@
-<h2>Social</h2><div class='grid'><button onclick="open('https://web.whatsapp.com')">WhatsApp</button><button onclick="open('https://www.instagram.com')">Instagram</button><button onclick="open('https://www.facebook.com')">Facebook</button><button onclick="open('https://www.linkedin.com')">LinkedIn</button></div><script src='../app.js'></script>
+<header class="hero small">
+  <h1>🌐 Social Media</h1>
+</header>
+
+<div class="grid">
+  <a class="app-btn" href="https://web.whatsapp.com" target="_blank">WhatsApp</a>
+  <a class="app-btn" href="https://www.instagram.com" target="_blank">Instagram</a>
+  <a class="app-btn" href="https://mail.google.com" target="_blank">Gmail</a>
+  <a class="app-btn" href="https://web.telegram.org" target="_blank">Telegram</a>
+  <a class="app-btn" href="https://www.facebook.com" target="_blank">Facebook</a>
+  <a class="app-btn" href="https://twitter.com" target="_blank">Twitter</a>
+</div>
