Rewrite personality.html with complete HTML structure

--- a/pages/personality.html
+++ b/pages/personality.html
@@ -1,1 +1,46 @@
-<h2>Personality</h2><div class='grid'><button onclick="open('https://www.ted.com')">TED</button><button onclick="open('https://www.coursera.org')">Coursera</button><button onclick="open('https://www.udemy.com')">Udemy</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Personality | HarDil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Personality, learning and self growth resources">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>🧠 Personality</h1>
+  <p>Learn · Grow · Improve</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.ted.com" target="_blank" rel="noopener">
+        <img src="assets/icons/ted.png" alt="TED">
+        <span>TED</span>
+      </a>
+
+      <a class="app-btn" href="https://www.coursera.org" target="_blank" rel="noopener">
+        <img src="assets/icons/coursera.png" alt="Coursera">
+        <span>Coursera</span>
+      </a>
+
+      <a class="app-btn" href="https://www.udemy.com" target="_blank" rel="noopener">
+        <img src="assets/icons/udemy.png" alt="Udemy">
+        <span>Udemy</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
