--- a/pages/ride.html
+++ b/pages/ride.html
@@ -1,1 +1,51 @@
-<h2>Ride</h2><div class='grid'><button onclick="open('https://m.uber.com')">Uber</button><button onclick="open('https://www.rapido.bike')">Rapido</button><button onclick="open('https://www.olacabs.com')">Ola</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Personality | HarDil</title>
+
+  <!-- Mobile & PWA -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4f46e5">
+  <meta name="description" content="HarDil Personality – learning and self-growth resources">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>🧠 Personality</h1>
+  <p>Learn · Grow · Improve</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.ted.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/ted.png" alt="TED Talks">
+        <span>TED</span>
+      </a>
+
+      <a class="app-btn" href="https://www.coursera.org" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/coursera.png" alt="Coursera">
+        <span>Coursera</span>
+      </a>
+
+      <a class="app-btn" href="https://www.udemy.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/udemy.png" alt="Udemy">
+        <span>Udemy</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
