Rewrite shopping.html with complete HTML structure

--- a/pages/shopping.html
+++ b/pages/shopping.html
@@ -1,1 +1,76 @@
-<h2>Shopping</h2><div class='grid'><button onclick="open('https://www.amazon.in')">Amazon</button><button onclick="open('https://www.flipkart.com')">Flipkart</button><button onclick="open('https://www.myntra.com')">Myntra</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Shopping | HarDil</title>
+
+  <!-- Mobile & PWA -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4f46e5">
+  <meta name="description" content="HarDil Shopping – popular Indian shopping apps in one place">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>🛒 Shopping</h1>
+  <p>Popular Indian shopping platforms</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.amazon.in" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/amazon.png" alt="Amazon">
+        <span>Amazon</span>
+      </a>
+
+      <a class="app-btn" href="https://www.flipkart.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/flipkart.png" alt="Flipkart">
+        <span>Flipkart</span>
+      </a>
+
+      <a class="app-btn" href="https://www.myntra.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/myntra.png" alt="Myntra">
+        <span>Myntra</span>
+      </a>
+
+      <a class="app-btn" href="https://www.ajio.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/ajio.png" alt="Ajio">
+        <span>Ajio</span>
+      </a>
+
+      <a class="app-btn" href="https://www.meesho.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/meesho.png" alt="Meesho">
+        <span>Meesho</span>
+      </a>
+
+      <a class="app-btn" href="https://www.snapdeal.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/snapdeal.png" alt="Snapdeal">
+        <span>Snapdeal</span>
+      </a>
+
+      <a class="app-btn" href="https://www.tatacliq.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/tatacliq.png" alt="Tata CLiQ">
+        <span>Tata CLiQ</span>
+      </a>
+
+      <a class="app-btn" href="https://www.jiomart.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/jiomart.png" alt="JioMart">
+        <span>JioMart</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
