--- a/pages/sports.html
+++ b/pages/sports.html
@@ -1,1 +1,66 @@
-<h2>Sports</h2><div class='grid'><button onclick="open('https://www.cricbuzz.com')">Cricbuzz</button><button onclick="open('https://www.espn.com')">ESPN</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sports | HarDil</title>
+
+  <!-- Mobile & PWA -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4f46e5">
+  <meta name="description" content="HarDil Sports – live scores, cricket, football and more">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>🏏 Sports</h1>
+  <p>Live scores · Matches · Highlights</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.cricbuzz.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/cricbuzz.png" alt="Cricbuzz">
+        <span>Cricbuzz</span>
+      </a>
+
+      <a class="app-btn" href="https://www.espn.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/espn.png" alt="ESPN">
+        <span>ESPN</span>
+      </a>
+
+      <a class="app-btn" href="https://www.hotstar.com/in/sports" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/hotstar.png" alt="Hotstar Sports">
+        <span>Hotstar</span>
+      </a>
+
+      <a class="app-btn" href="https://www.sonyliv.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/sonyliv.png" alt="Sony LIV">
+        <span>Sony LIV</span>
+      </a>
+
+      <a class="app-btn" href="https://www.jiocinema.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/jiocinema.png" alt="JioCinema">
+        <span>JioCinema</span>
+      </a>
+
+      <a class="app-btn" href="https://www.aajtak.in/sports" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/aajtak.png" alt="Aaj Tak Sports">
+        <span>Aaj Tak</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
